@@ -32,9 +32,6 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 @Data
 public class QueryExecutor implements Closeable {
-
-	private final Worker worker;
-
 	private final ThreadPoolExecutor executor;
 
 	private final int secondaryIdSubPlanLimit;
@@ -53,12 +50,13 @@ public class QueryExecutor implements Closeable {
 		return cancelledQueries.contains(query);
 	}
 
-	public boolean execute(Query query, QueryExecutionContext executionContext, ShardResult result, Set<Entity> entities) {
+	public boolean execute(Query query, Worker worker, QueryExecutionContext executionContext, ShardResult result, Set<Entity> entities) {
 
 		log.info("Received query: {}", query);
 
 		Stopwatch stopwatch = Stopwatch.createStarted();
-		final ThreadLocal<QueryPlan<?>> plan = ThreadLocal.withInitial(() -> query.createQueryPlan(new QueryPlanContext(worker, secondaryIdSubPlanLimit)));
+		final ThreadLocal<QueryPlan<?>> plan =
+				ThreadLocal.withInitial(() -> query.createQueryPlan(new QueryPlanContext(executionContext.getStorage(), secondaryIdSubPlanLimit)));
 		log.trace("Created query plan in {}", stopwatch);
 
 		if (entities.isEmpty()) {
@@ -76,7 +74,7 @@ public class QueryExecutor implements Closeable {
 					entities.stream()
 							.map(entity -> new QueryJob(executionContext, plan, entity))
 							.map(job -> CompletableFuture.supplyAsync(job, executor))
-							.collect(Collectors.toList());
+							.toList();
 
 			final CompletableFuture<Void> allDone = CompletableFuture.allOf(futures.toArray(CompletableFuture[]::new));
 
@@ -84,7 +82,8 @@ public class QueryExecutor implements Closeable {
 												  .map(CompletableFuture::join)
 												  .flatMap(Optional::stream)
 												  .collect(Collectors.toList()))
-				   .whenComplete((results, exc) -> result.finish(Objects.requireNonNullElse(results, Collections.emptyList()), Optional.ofNullable(exc), worker));
+				   .whenComplete((results, exc) -> result.finish(Objects.requireNonNullElse(results, Collections.emptyList()), Optional.ofNullable(exc), worker
+				   ));
 
 
 			return true;
@@ -92,12 +91,12 @@ public class QueryExecutor implements Closeable {
 		catch (Exception e) {
 			ConqueryError err = asConqueryError(e);
 			log.warn("Error while executing {}", executionContext.getExecutionId(), err);
-			sendFailureToManagerNode(result, asConqueryError(err));
+			sendFailureToManagerNode(result, asConqueryError(err), worker);
 			return false;
 		}
 	}
 
-	public void sendFailureToManagerNode(ShardResult result, ConqueryError error) {
+	public void sendFailureToManagerNode(ShardResult result, ConqueryError error, Worker worker) {
 		result.finish(Collections.emptyList(), Optional.of(error), worker);
 	}
 
